--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -7,5 +7,5 @@ body {
   color: white;
   font-weight: bold;
   font-size: 70px;
-  background-image: image(./resources/images/the-flatiron-building.png);
+  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
 }
