--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -3,10 +3,9 @@ body {
   text-align: center;
 }
 
-#top-title {
+.top-menu {
   color: white;
   font-weight: bold;
   font-size: 70px;
   background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
-  height: 300px;
 }
