--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -9,3 +9,7 @@ body {
   font-size: 70px;
   background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
 }
+#page-links.top-menu {
+  color: white;
+  font-size: 18px;
+}
