--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -7,12 +7,15 @@ body {
   color: white;
   font-weight: bold;
   font-size: 70px;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
 }
 #our-process {
   color: black;
   font-size: 32px;
   font-weight: bold;
 }
-.top-menu #page-links {
-  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+#page-links {
+  color: white;
+  font-size: 18px;
+
 }
