--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -8,6 +8,7 @@ body {
   font-weight: bold;
   font-size: 70px;
   background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+  background: no-repeat;
 }
 #our-process {
   color: black;
