--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -9,7 +9,7 @@ body {
   font-size: 70px;
   background: no-repeat;
   background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
-  height: 850px;
+  background-size: cover;
 }
 #our-process {
   color: black;
