--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -16,8 +16,7 @@ body {
   font-size: 32px;
   font-weight: bold;
 }
-#page-links {
+#page-links.top-menu {
   color: white;
   font-size: 18px;
-
 }
