--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -16,7 +16,7 @@ body {
   font-size: 32px;
   font-weight: bold;
 }
-#page-links .top-menu {
+.top-menu #page-links {
   color: white;
   font-size: 18px;
 }
