Page Links fix attempt 3

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -16,7 +16,7 @@ body {
   font-size: 32px;
   font-weight: bold;
 }
-.top-menu #page-links {
+h4 #page-links {
   color: white;
   font-size: 18px;
 }
