--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -2,14 +2,16 @@ body {
   font-family: Helvetica;
   text-align: center;
 }
+.background-image {
+  background: no-repeat;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+  background-size: cover;
+}
 
 #top-menu {
   color: white;
   font-weight: bold;
   font-size: 70px;
-  background: no-repeat;
-  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
-  background-size: cover;
 }
 #our-process {
   color: black;
